# demo_project2

./: Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
demo_project2/dataset/: make_dataset.py
demo_project2/features/: build_features.py
demo_project2/models/: deep_api.py
demo_project2/tests/: test_unit_model.py
demo_project2/visualization/: visualize.py
docs/: Makefile  conf.py  make.bat
notebooks/: 1.0-demo_project2_start.ipynb
