# -*- coding: utf-8 -*-
[metadata]
name = demo_project2
summary = Second attempt of a demo project 
description-file =
    README.md
author = Aurora GV
author-email = aurora.gonzalez2@um.es
version = 0.0.1
license = MIT
home-page = auroragonzalez/demo_project2
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    demo_project2

[entry_points]

deepaas.v2.model = 
    demo_project2 = demo_project2.models.deep_api

